Fix altmetric alignment

--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -93,4 +93,8 @@
 .altmetric {
     padding: 0;
     vertical-align: middle;
+    text-align: right;
+}
+.__dimensions_badge_embed__ {
+    text-align: right;
 }
